--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,13 +2,29 @@
 <h2>All Movies</h2>
 
 <%#  Part 2: Start here... %>
+<%= form_tag movies_path, :method => :get, :id => "ratings_form" do %>
+  Include:
+  <% @all_ratings.each do |rating| %>
+    <%= rating %>
+    <% if session[:filtered_ratings].nil? or session[:filtered_ratings].include?(rating) %>
+      <%= check_box_tag "ratings[#{rating}]", 1, true %>
+    <% else %>
+      <%= check_box_tag "ratings[#{rating}]", 1, false %>
+    <% end %>
+  <% end %>
+  <%= submit_tag 'Refresh', :id => "ratings_submit" %>
+<% end %>
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th class="<%= ("hilite bg-warning" if session[:sort_title] == 1) %>">
+        <%= link_to 'Movie Title', movies_path(:sort_title => '1', :ratings => params[:ratings], :id => 'title_header') %>
+      </th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th class="<%= ("hilite bg-warning" if session[:sort_release_date] == 1) %>">
+        <%= link_to 'Release Date', movies_path(:sort_release_date => '1', :ratings => params[:ratings], :id => 'release_date_header') %>
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
