--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -19,11 +19,11 @@
   <thead>
     <tr>
       <th class="<%= ("hilite bg-warning" if session[:sort_title] == 1) %>" id="title_header">
-        <%= link_to 'Movie Title', movies_path(:sort_title => '1', :ratings => params[:ratings], :id => 'title_header') %>
+        <%= link_to 'Movie Title', movies_path(:sort_title => '1', :ratings => params[:ratings], :id => 'title_header'), :id => "title_header" %>
       </th>
       <th>Rating</th>
       <th class="<%= ("hilite bg-warning" if session[:sort_release_date] == 1) %>" id="release_date_header">
-        <%= link_to 'Release Date', movies_path(:sort_release_date => '1', :ratings => params[:ratings], :id => 'release_date_header') %>
+        <%= link_to 'Release Date', movies_path(:sort_release_date => '1', :ratings => params[:ratings], :id => 'release_date_header'), :id => "release_date_header" %>
       </th>
       <th>More Info</th>
     </tr>
