--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -31,15 +31,9 @@
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
-        <td>
-          <%= movie.title %>
-        </td>
-        <td>
-          <%= movie.rating %>
-        </td>
-        <td>
-          <%= movie.release_date %>
-        </td>
+        <td><%= movie.title %></td>
+        <td><%= movie.rating %></td>
+        <td><%= movie.release_date %></td>
         <td>
           <%= link_to "More about #{movie.title}", movie_path(movie) %>
         </td>
